Update Orphanet ProductXmlReaders